Fix list bullet visibility by adding explicit list-style-type

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -138,6 +138,16 @@
     padding-left: 2rem;
   }
 
+  ul {
+    list-style-type: disc;
+    list-style-position: outside;
+  }
+
+  ol {
+    list-style-type: decimal;
+    list-style-position: outside;
+  }
+
   li {
     margin-bottom: 0.5rem;
     line-height: 1.7;
